sites/all/themes/teiazen/sass/views-styles.scss
/**
 * @file
 * Views Styling
 */

@import "base";


/*
 * Views' admin tabs
 *
 * The views admin tabs use the same classes as the secondary tabs. We prevent
 * some of our tab styling from bleeding into (and breaking) the Views admin
 * pages. If your sub-theme isn't used for admin pages, you can remove this
 * entire section.
 */
.views-displays .secondary {
  li {
    float: none;
    margin: 0 6px 0;
  }

  a:link,
  a:visited {
    @include single-text-shadow(none);
    padding: 2px 7px 3px;
  }

  .open > a {
    @include border-radius(7px 7px 0 0);
    &:hover {
      color: #333;
    }
  }

  .action-list li {
    margin: 0;
    &:first-child {
      @include border-radius(0 7px 0 0);
    }
    &:last-child {
      @include border-radius(0 0 7px 7px);
    }
  }
}

.views-row {
  clear: both;
}
.views-row:after {
  content: "";
  display: block;
  clear: both;
  height: 0.5em;
}

/**
 * Pane styling
 */

@media all and (min-width: 960px) {
  $zen-column-count: 12;
  $zen-gutter-width: 20px;

  #content {

    h2.pane-title {
      text-align: center;
      font-size: 1.2em;
      letter-spacing: 0.4em;
      color: $black-header;
      padding: 0;
      border-top: solid 5px $light-lighter;
      border-bottom: solid 1px #ddd;
      margin: 0 zen-half-gutter() 0.8em;
    }

    div.publish-date,
    div.working-holiday-program {
      color: $grey-text;
    }

    div.more-link,
    ul.inline li.node-readmore {
      color: $dark-color;
    }
    ul.inline li.node-readmore {
      float: right;
      padding: 0 0 0 1em;
    }

  }

  #content {
    .panel-pane:after {
      content: ".";
      display: block;
      height: 2em;
      visibility: hidden;
      clear: both;
    }
  }

  /**
   * Taxonomy term
   */

  .view-taxonomy-term {
    @include zen-nested-container();
    h3.field-title-field {
      margin-top: 0;
      margin-bottom: 0;
      color: $light-color;
    }
  }

  .view-taxonomy-term.view-display-id-pane {
    figure {
      @include zen-grid-item(4, 1);
    }

    h3, p,
    div.field, /* e-info.org.tw bug */
    div.event-nodeapi, /* e-info.org.tw bug */
    div.publish-date,
    div.more-link {
      @include zen-grid-item(8, 1, right);
      @include zen-clear(right);
    }
    .views-row {
      margin-top: 1em;
    }
    .views-row.views-row-first {
      margin-top: 0em;
    }
    div.more-link:after {
      content: ".";
      display: block;
      visibility: hidden;
      clear: both;
    }
  }

  .view-taxonomy-term.view-display-id-recent_pane-6,
  .view-taxonomy-term.view-display-id-recent_pane {
    figure.field-title-image {
      @include zen-grid-item(4, 1);
    }
    h3, p,
    div.field, /* e-info.org.tw bug */
    div.event-nodeapi, /* e-info.org.tw bug */
    div.publish-date,
    div.more-link {
      @include zen-grid-item(8, 1, right);
      @include zen-clear(right);
    }
  }

  .view-taxonomy-term.view-display-id-no_title_image_pane {
    @include zen-grid-item(12, 1);
  }

  .latest-attachment-full .view-display-id-latest_attachment > .view-content {
    @include zen-grid-item(12, 1);
  }
  .latest-attachment-full > .view-content {
    @include zen-clear();
    @include zen-grid-item(12, 1);
  }

  .latest-attachment-2 .view-display-id-latest_attachment {
    > .view-content {
      @include zen-grid-item(8, 1);
      @include zen-nested-container();
      @include zen-clear(left);
    }
    figure.field-title-image {
      @include zen-grid-item(6, 1);
    }
    h3, p,
    div.field, /* e-info.org.tw bug */
    div.event-nodeapi, /* e-info.org.tw bug */
    div.publish-date,
    div.more-link {
      @include zen-grid-item(6, 1, right);
      @include zen-clear(right);
    }
  }
  .latest-attachment-2 > .view-content {
    @include zen-clear(right);
    @include zen-grid-item(4, 1, right);
  }


  /**
   * Slider
   */

  /*
   * Normalize Flexslider default theming.
   */
  .flexslider {
    border: none;
    border-radius: 0;
    box-shadow: none;
  }

  /*
   * Top slider
   */
  div.view-teia-slideshow {
    .view-content .flexslider {
      background: $white-shadow;
    }

    li {
      overflow: hidden;
    }

    figure {
      @include zen-grid-flow-item(8, 12, false, true);
      @include zen-float(left);
      @include zen-clear(left);
    }

    div.slideshow-text,
    div.more-link {
      @include zen-grid-flow-item(4, 12, false, false);
      position: absolute;
      padding-right: 3 * zen-half-gutter();
    }
    div.slideshow-text {
      top: 0;
      right: 0;
      padding-top: 0.5em;
      padding-bottom: 0.5em;
    }
    div.more-link {
      bottom: 0;
      right: 0;
      z-index: 1;
      padding-bottom: 0.7em;
    }
    div.more-link:before {
      position: absolute;
      left: 0;
      right: 0;
      bottom: 0;
      height: 3.8em;
      content: "";
      display: block;
      @include background-image(linear-gradient(rgba(245, 245, 245, 0), $white-shadow, $white-shadow, $white-shadow));
      z-index: -1;
    }

    h3 { font-size: x-large; }
    div.publish-date { color: $grey-text; }
    h3, div.publish-date, p {
      margin-top: 0.3em;
      margin-bottom: 0.3em;
    }

  }
}

